Fix alignment of contact form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,8 +45,12 @@ nav a {
 }
 
 li {
-    display: inline;
     color: #000000;
+    width: 90%;
+}
+
+ul {
+    list-style: none;
 }
 
 .nav-section a {
@@ -68,8 +72,6 @@ p {
 
 body {
     background-color: #ffffff;
-    margin: 0;
-    padding: 0;
     font-family: 'Kanit', sans-serif;
     color: #000000;
     font-weight: 300;
@@ -107,7 +109,7 @@ body {
 
 /* media query */
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 320px) {
     #logo {
         width: 65%;
     }
@@ -117,6 +119,14 @@ body {
     }
 }
 
+@media screen and (min-width: 320px) {
+    #form-section {
+        margin: auto;
+        content: auto;
+    }
+
+}
+
 /* Contact Page Specific */
 
 /* Contact Form */
@@ -124,5 +134,23 @@ body {
 .form-section {
     max-width: 700px;
     margin: 60px auto;
+}
+
+#form-input {
+    display: flex;
+    border-radius: 5px;    
+}
+
+#fname, #email, #phone {
+    width: 100%;
+    padding: 5px 5px;
+    margin: 20px 0;
+    display: inline-block;
+    border: 2px solid #000000;
+}
+
+.w3-container {
+    display: flex;
+    flex-direction: column;
 }
 
